--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,3 +14,21 @@ html
       == yield
       - if current_user && controller_name != 'feedbacks'
         == render 'layouts/feedback'
+
+    #modal.modal.fade role="dialog" tabindex="-1"
+      .modal-dialog.modal-lg role="document"
+        .modal-content
+          .modal-header
+            button.close aria-label="Close" data-dismiss="modal" type="button"
+              span aria-hidden="true"  &times;
+            h4.modal-title
+          .modal-body
+          .modal-footer
+            button.btn.btn-default data-dismiss="modal" type="button" = t(:cancel)
+            button.btn.btn-primary.save type="button" = t(:save)
+
+    sass:
+      #modal
+        .modal-body
+          .action-buttons
+            display: none
