--- a/app/views/seminars/edit.html.slim
+++ b/app/views/seminars/edit.html.slim
@@ -1,17 +1,2 @@
-- if request.xhr?
-  = simple_form_for(@seminar, remote: true) do |f|
-    - part = params[:part]
-    input type='hidden' name='part' value=part
-    - if part.in? %w(benefit content notes)
-      = render 'seminars/form/text', f: f, field: part
-    - elsif part.in? %w(general events)
-      = render "seminars/form/#{part}", f: f
-    section.action-buttons
-      .col-md-12
-        .pull-right
-          => link_to t(:cancel), '#cancel', class: 'btn btn-default'
-          = f.submit t(:save), class: 'btn btn-primary'
-- else
-  = render 'seminars/show/header'
-
-  = render 'form'
+== render 'seminars/show/header'
+== render 'form'
