--- a/app/views/seminars/show.html.slim
+++ b/app/views/seminars/show.html.slim
@@ -2,7 +2,8 @@
 
 div
   ul.nav.nav-tabs
-    li = link_to 'Inhalt', '#general', data: { toggle: 'tab' }
+    li.active
+      = link_to 'Inhalt', '#general', data: { toggle: 'tab' }
     - if policy(Attendee).index?
       li = link_to "Teilnehmer (#{@seminar.attendees.count})", '#attendees', data: { toggle: 'tab' }
     - if policy(Invoice).index?
@@ -10,24 +11,22 @@ div
     li = link_to 'Kopien',                                     '#copies',    data: { toggle: 'tab' }
     li = link_to 'PRAS',       pras_seminar_url(@seminar)     if policy(Seminar).pras?
     li = link_to 'Änderungen', versions_seminar_url(@seminar) if policy(Seminar).versions?
+
   .tab-content
     .tab-pane#attendees  = render 'seminars/show/attendees' if policy(Attendee).index?
     .tab-pane#invoices   = render 'seminars/show/invoices'  if policy(Invoice).index?
     .tab-pane#copies     = render 'seminars/show/copies'
-    .tab-pane#general
+    .tab-pane.active#general
       .row
-        .col-md-6
-          - %i(benefit content notes).each do |text_field|
-            - title = Seminar.human_attribute_name text_field
-            = render 'layouts/shared/panel_box', title: title, edit_link: edit_seminar_url(@seminar, part: text_field) do
-              = @seminar.send(text_field)&.html_safe
-        .col-md-6
-          = render 'layouts/shared/panel_box',
-                  title: 'Allgemein',
-                  edit_link: edit_seminar_url(@seminar, part: :general) do
-            = render 'seminars/show/general'
-          = render 'layouts/shared/panel_box',
-                  title: Seminar.human_attribute_name(:events),
-                  edit_link: edit_seminar_url(@seminar, part: :events) do
-            = render 'seminars/show/events'
+        .col-md-8
+          h4 = Seminar.human_attribute_name :benefit
+          = @seminar.benefit&.html_safe
+          h4 = Seminar.human_attribute_name :content
+          = @seminar.content&.html_safe
+          h4 = Seminar.human_attribute_name :notes
+          = @seminar.notes&.html_safe
+        .col-md-4
+          = render 'seminars/show/general'
+          h4 = Seminar.human_attribute_name(:events)
+          = render 'seminars/show/events'
           = render 'seminars/show/categories_panel'
