--- a/app/views/seminars/show/_categories_panel.html.slim
+++ b/app/views/seminars/show/_categories_panel.html.slim
@@ -1,17 +1,19 @@
-= panel_box title: Seminar.human_attribute_name(:categories) do
-  = render 'seminars/show/categories', categories: current_catalog.categories.roots
+h4 = Seminar.human_attribute_name(:categories)
+= render 'seminars/show/categories', categories: current_catalog.categories.roots
 
-sass:
-  ul.categories
-    overflow: hidden
-    ul
-      margin-left: 30px
-      margin-top: 5px
-      a
-        padding: 3px 8px
+- content_for :style do
+  sass:
+    ul.categories
+      overflow: hidden
+      ul
+        margin-left: 30px
+        margin-top: 5px
+        a
+          padding: 3px 8px
 
-coffee:
-  $(document).ready ->
-    $("a[data-behavior=toggle-category]").on "ajax:success", ->
-      $(this).closest('li').toggleClass('active')
-      alert 'Thema gespeichert.'
+- content_for :script do
+  coffee:
+    $(document).ready ->
+      $("a[data-behavior=toggle-category]").on "ajax:success", ->
+        $(this).closest('li').toggleClass('active')
+        alert 'Thema gespeichert.'
