Show seminar cleanup

--- a/app/views/seminars/show.html.slim
+++ b/app/views/seminars/show.html.slim
@@ -2,30 +2,17 @@
 
 div
   ul.nav.nav-tabs
-    li = link_to 'Inhalt', '#general', data: { toggle: 'tab' }
+    li = link_to 'Inhalt',                                            '#general',   data: { toggle: 'tab' }
     - if policy(Attendee).index?
       li.active = link_to "Teilnehmer (#{@seminar.attendees.count})", '#attendees', data: { toggle: 'tab' }
     - if policy(Invoice).index?
-      li = link_to Seminar.human_attribute_name(:invoices),    '#invoices',  data: { toggle: 'tab' }
-    li = link_to 'Kopien',                                     '#copies',    data: { toggle: 'tab' }
+      li = link_to Seminar.human_attribute_name(:invoices),           '#invoices',  data: { toggle: 'tab' }
+    li = link_to 'Kopien',                                            '#copies',    data: { toggle: 'tab' }
     li = link_to 'PRAS',       pras_seminar_url(@seminar)     if policy(Seminar).pras?
     li = link_to 'Änderungen', versions_seminar_url(@seminar) if policy(Seminar).versions?
 
   .tab-content
-    .tab-pane.active#attendees  = render 'seminars/show/attendees' if policy(Attendee).index?
-    .tab-pane#invoices          = render 'seminars/show/invoices'  if policy(Invoice).index?
-    .tab-pane#copies            = render 'seminars/show/copies'
-    .tab-pane#general
-      .row
-        .col-md-8
-          h4 = Seminar.human_attribute_name :benefit
-          = @seminar.benefit&.html_safe
-          h4 = Seminar.human_attribute_name :content
-          = @seminar.content&.html_safe
-          h4 = Seminar.human_attribute_name :notes
-          = @seminar.notes&.html_safe
-        .col-md-4
-          = render 'seminars/show/general'
-          h4 = Seminar.human_attribute_name(:events)
-          = render 'seminars/show/events'
-          = render 'seminars/show/categories_panel'
+    .tab-pane#general          = render 'seminars/show/general'
+    .tab-pane#attendees.active = render 'seminars/show/attendees' if policy(Attendee).index?
+    .tab-pane#invoices         = render 'seminars/show/invoices'  if policy(Invoice).index?
+    .tab-pane#copies           = render 'seminars/show/copies'
