--- a/app/views/seminars/category.html.slim
+++ b/app/views/seminars/category.html.slim
@@ -1,6 +1,6 @@
 = render 'seminars/index/header'
 
-- current_path = @category&.path.to_a
+- current_path = (@category && @category.path).to_a
 .row
   .col-md-3
     ul.nav.nav-pills.nav-stacked.categories
