--- a/app/views/admin/seminars/search.html.slim
+++ b/app/views/admin/seminars/search.html.slim
@@ -1,5 +1,5 @@
 label for='seminar-search'
-select#seminar-search name='seminar' class='select2' data={ url: new_seminar_url(copy_from: 'ID') }
+select#seminar-search name='seminar' class='select2' data={ url: new_admin_seminar_url(copy_from: 'ID') }
   option value='' Bitte auswählen
   - Seminar.order(:number).where(year: current_year - 1).all.each do |seminar|
     option value=seminar.id
