--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -15,4 +15,4 @@
       = link_to "#{category.number} #{category.name} (#{category.seminars.count})", category
       br
 
-= render 'seminars/table', seminars: @category.seminars
+= render 'admin/seminars/table', seminars: @category.seminars
