--- a/app/views/admin/seminars/_table.html.slim
+++ b/app/views/admin/seminars/_table.html.slim
@@ -13,7 +13,7 @@
           - attendees_count = seminar.attendees.count
           - events_count = seminar.events.count
           - cache [seminar, attendees_count, events_count] do
-            tr data = {url: url_for(seminar)}
+            tr data = {url: url_for([:admin, seminar])}
               td.number
                 = seminar.number
                 br
@@ -23,9 +23,9 @@
                 = seminar.title
                 br
                 small.text-muted = seminar.subtitle
-              td = render 'seminars/status', seminar: seminar
+              td = render 'admin/seminars/status', seminar: seminar
               td.icons
-                => link_to fa_icon('users', text: attendees_count), [seminar, anchor: 'attendees']
+                => link_to fa_icon('users', text: attendees_count), [:admin, seminar, anchor: 'attendees']
                 => fa_icon 'calendar', text: events_count
                 /- if seminar.bookings.any?
                   = progress_bar_for_bookings(seminar)
