--- a/app/views/admin/seminars/canceled.html.slim
+++ b/app/views/admin/seminars/canceled.html.slim
@@ -1,3 +1,3 @@
-= render 'seminars/index/header'
+= render 'admin/seminars/index/header'
 = render 'table', seminars: @seminars, header: false
 .pull-right = paginate @seminars
