--- a/app/views/admin/seminars/editing_status.html.slim
+++ b/app/views/admin/seminars/editing_status.html.slim
@@ -1,4 +1,4 @@
-= render 'seminars/index/header'
+= render 'admin/seminars/index/header'
 
 .row
   .col-md-3
@@ -6,7 +6,7 @@
       - @scopes.each do |scope|
         li class=('active' if @scope == scope)
           = link_to t(".#{scope}", count: current_catalog.seminars.send(scope).count) ,
-              editing_status_seminars_path(scope: scope)
+              editing_status_admin_seminars_path(scope: scope)
   .col-md-9
     = render 'table', seminars: @seminars, header: false, with_editing_labels: true
     .pull-right = paginate @seminars
