--- a/app/views/admin/seminars/index/_categories.html.slim
+++ b/app/views/admin/seminars/index/_categories.html.slim
@@ -4,6 +4,6 @@ ul.nav.nav-pills.nav-stacked.categories
     li class=('active' if active)
       - label = "#{category.display_name} (#{category.all_seminars.count})"
       /- label = category.display_name
-      = link_to label, category_seminars_url(category), title: label
+      = link_to label, category_admin_seminars_url(category), title: label
       - if active && category.children.any?
-        = render 'seminars/index/categories', categories: category.children, current_path: current_path
+        = render 'admin/seminars/index/categories', categories: category.children, current_path: current_path
