--- a/app/views/admin/seminars/show/_general.html.slim
+++ b/app/views/admin/seminars/show/_general.html.slim
@@ -12,21 +12,21 @@
         - if @seminar.layout_finished?
           - title_msg = t('.warning_seminar_layout_finished')
           - confirm_msg = t('.confirm_message_finished_edit')
-          => link_to fa_icon('pencil', text: t(:edit)), edit_seminar_url(@seminar),
+          => link_to fa_icon('pencil', text: t(:edit)), edit_admin_seminar_url(@seminar),
                   class: 'btn btn-warning btn-block', title: title_msg, data: { confirm: confirm_msg }
         - else
-          => edit_link edit_seminar_url(@seminar), class: 'btn-block'
-      .col-md-6 = render 'seminars/status', seminar: @seminar
+          => edit_link edit_admin_seminar_url(@seminar), class: 'btn-block'
+      .col-md-6 = render 'admin/seminars/status', seminar: @seminar
 
-    /= render 'seminars/status', seminar: @seminar
+    /= render 'admin/seminars/status', seminar: @seminar
     - unless @seminar.catalog.published?
       br
-      = simple_form_for @seminar, url: [@seminar, action: :finish_editing], method: :patch do |f|
+      = simple_form_for @seminar, url: [:admin, @seminar, action: :finish_editing], method: :patch do |f|
         = f.input :editing_finished, collection: { 'Bearbeitung abgeschlossen' => true, 'in Bearbeitung' => false },
                 include_blank: false, label: false,
                 wrapper_html: { title: ldate(@seminar.editing_finished_at) },
                 input_html: { data: { behavior: 'submit-on-change' }, disabled: !policy(@seminar).finish_editing? }
-      = simple_form_for @seminar, url: [@seminar, action: :finish_layout], method: :patch do |f|
+      = simple_form_for @seminar, url: [:admin, @seminar, action: :finish_layout], method: :patch do |f|
         = f.input :layout_finished, collection: { 'Layout abgeschlossen' => true, 'Layout offen' => false },
                 include_blank: false, label: false,
                 wrapper_html: { title: ldate(@seminar.layout_finished_at) },
@@ -37,9 +37,9 @@
           $('[data-behavior=submit-on-change]').change -> $(this).closest('form').submit()
 
     br
-    = render 'seminars/show/sub_modules'
+    = render 'admin/seminars/show/sub_modules'
 
-    /= render 'seminars/show/teachers'
+    /= render 'admin/seminars/show/teachers'
     - location = @seminar.location
     = link_to icon_for(location, text: location.name, size: 2), location if location
     p
@@ -56,5 +56,5 @@
         label Suchbegriffe
         =< @seminar.key_words
 
-    = render 'seminars/show/events'
-    = render 'seminars/show/categories_panel'
+    = render 'admin/seminars/show/events'
+    = render 'admin/seminars/show/categories_panel'
