--- a/app/views/admin/seminars/show/_header.html.slim
+++ b/app/views/admin/seminars/show/_header.html.slim
@@ -2,10 +2,10 @@
 - module_parent = @seminar.parent
 
 ol.breadcrumb
-  li = link_to Seminar.model_name.human(count: 2), seminars_url
+  li = link_to Seminar.model_name.human(count: 2), admin_seminars_url
   - if (category = @seminar.categories.first)
     - category.path.each do |cat|
-      li = link_to cat.name, seminars_url(category_id: cat.id)
+      li = link_to cat.name, admin_seminars_url(category_id: cat.id)
   - if (module_parent)
     li = link_to module_parent.number, module_parent
 
@@ -30,8 +30,8 @@ ol.breadcrumb
 
   .col-md-2
     - icon, text, action, css_class = @seminar.published? ? ['eye-slash', 'Deaktivieren!', :unpublish, 'success'] : ['eye', 'Veröffentlichen!', :publish, 'default']
-    => link_to fa_icon(icon, text: text), [@seminar, action: action], method: :patch, class: "btn btn-#{css_class} btn-block"
+    => link_to fa_icon(icon, text: text), [:admin, @seminar, action: action], method: :patch, class: "btn btn-#{css_class} btn-block"
     => link_to fa_icon('external-link', text: 'Externe Ansicht'), seminar_visitor_url(@seminar), class: 'btn btn-default btn-block'
 
-    = copy_link new_seminar_url(copy_from: @seminar.id), class: 'btn-block'
+    = copy_link new_admin_seminar_url(copy_from: @seminar.id), class: 'btn-block'
 
