--- a/app/views/admin/seminars/versions.html.slim
+++ b/app/views/admin/seminars/versions.html.slim
@@ -1,15 +1,15 @@
-= render 'seminars/show/header'
+= render 'admin/seminars/show/header'
 
 div
   ul.nav.nav-tabs
-    li = link_to 'Inhalt', [@seminar, anchor: 'general']
+    li = link_to 'Inhalt', [:admin, @seminar, anchor: 'general']
     - if policy(Attendee).index?
-      li = link_to "Teilnehmer (#{@seminar.attendees.count})", [@seminar, anchor: 'attendees']
+      li = link_to "Teilnehmer (#{@seminar.attendees.count})", [:admin, @seminar, anchor: 'attendees']
     - if policy(Invoice).index?
-      li = link_to 'Rechnungen', [@seminar, anchor: 'invoices']
-    li = link_to 'Kopien', [@seminar, anchor: 'copies']
-    li = link_to 'PRAS', pras_seminar_url(@seminar) if policy(Seminar).pras?
-    li.active = link_to 'Änderungen', versions_seminar_url(@seminar)
+      li = link_to 'Rechnungen', [:admin, @seminar, anchor: 'invoices']
+    li = link_to 'Kopien', [:admin, @seminar, anchor: 'copies']
+    li = link_to 'PRAS', pras_admin_seminar_url(@seminar) if policy(Seminar).pras?
+    li.active = link_to 'Änderungen', versions_admin_seminar_url(@seminar)
   .tab-content
 
     - hidden_fields = %w(created_at updated_at statistic)
