--- a/app/views/attendees/index.html.slim
+++ b/app/views/attendees/index.html.slim
@@ -24,15 +24,13 @@
             th = Booking.human_attribute_name(:contact_email)
             th Firma / Arbeitgeber
             th
-            /th
         tbody
           - @attendees.each do | attendee |
-            /- invoice = attendee.invoice
             - booking = attendee.booking
             tr data = {url: url_for(attendee)} class=('warning' if attendee.canceled?)
               td = fa_icon booking.attendees.count == 1 ? 'user' : 'users'
               td = ldate attendee.created_at, format: :short2
-              td = link_to attendee.seminar.number, attendee.seminar
+              td = link_to attendee.seminar.number, [:admin, attendee.seminar]
               td = attendee.name
               td = booking.contact_email
               td
@@ -40,12 +38,6 @@
                   = link_to attendee.company&.name, attendee.company
                 - else
                   = [booking.company_title, booking.invoice_title].select(&:present?).first
-              /td
-                - if invoice
-                  => pdf_link invoice_path(invoice, format: :pdf), text: "Rechnung #{invoice.number}"
-                  => link_to fa_icon('pencil'), invoice
-                - else
-                  = link_to 'Rechnung schreiben', new_invoice_path(booking_id: booking.id), class: 'btn btn-primary btn-xs'
               td
                 - if attendee.canceled?
                   |  storniert
