--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -66,7 +66,7 @@
 
   .action-buttons
     .pull-right
-      => link_to t(:cancel), (session[:back_url] || @seminar), class: 'btn btn-default'
+      => link_to t(:cancel), (session[:back_url] || [:admin, @seminar)], class: 'btn btn-default'
       = f.submit t(:save), class: 'btn btn-primary'
 
 coffee:
