--- a/app/views/bookings/new.html.slim
+++ b/app/views/bookings/new.html.slim
@@ -8,7 +8,7 @@
     h4 = t('.error')
 
 h3
-  => link_to @seminar.number, @seminar
+  => link_to @seminar.number, [:admin, @seminar]
   | -
   =< @seminar.title
   br
