--- a/app/views/catalogs/_form.html.slim
+++ b/app/views/catalogs/_form.html.slim
@@ -7,6 +7,7 @@
         = f.input :title
         = f.input :year
         = f.input :published
+        = f.input :print_version
 
   section.action-buttons
     .col-md-12
