--- a/app/views/catalogs/index.html.slim
+++ b/app/views/catalogs/index.html.slim
@@ -12,6 +12,7 @@
         th = Catalog.human_attribute_name(:year)
         th = Catalog.human_attribute_name(:seminars)
         th = Catalog.human_attribute_name(:categories)
+        th = Catalog.human_attribute_name(:print_version)
         th
     tbody
       - @catalogs.each do |catalog|
@@ -21,4 +22,5 @@
           td = catalog.year
           td = catalog.seminars.count
           td = catalog.categories.count
+          td = link_to('Herunterladen', catalog.print_version.url, target: '_blank') if catalog.print_version.present?
           td = link_to fa_icon('table', text: 'Exportieren'), [catalog, format: :xlsx], class: 'btn btn-default btn-xs'
